# group3

./: .flake8  .gitignore  Dockerfile  README.md  augmented_train.java  converted.java  converted.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.java  train.py
.github/workflows/: docker-publish.yml
code_generator/: code_generator.py
code_scraper/code_scraper/: items.py  settings.py
code_scraper/code_scraper/spiders/: abstract_code_spider.py  rosettacode_spider.py  sampleprograms_spider.py  walkccc_spider.py
data/andrewshitov/Bash/: Challenge89Part1.bash
data/andrewshitov/C/: Challenge89Part1.c
data/andrewshitov/C#/: Challenge89Part1.cs
data/andrewshitov/C++/: Challenge89Part1.cpp
data/andrewshitov/D/: Challenge89Part1.d
data/andrewshitov/Dart/: Challenge89Part1.dart
data/andrewshitov/Fortran/: Challenge89Part1.f90
data/andrewshitov/Go/: Challenge89Part1.go
data/andrewshitov/JavaScript/: Challenge89Part1.js
data/andrewshitov/Julia/: Challenge89Part1.jl
data/andrewshitov/Kotlin/: Challenge89Part1.kt
data/andrewshitov/Lisp/: Challenge89Part1.lisp
data/andrewshitov/Lua/: Challenge89Part1.lua
data_gathering/: code_generator.py  langs_util.py  scrapy.cfg
data_gathering/code_scraper/: middlewares.py  pipelines.py
fine_tuning/: model.py  process.py  run.py  script.sh  train.java-python.java  train_and_test.py  train_and_test.sh  valid.java-python.java  valid.java-python.python
train_test_data/: augmented_train.py  example.java  example.py  synthetic.java  synthetic.py  test.java  test.py
(+7905 files in other folders)
